Fix the export of libraries